2004-05-16  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Implemented influence of finite strip
	thickness 't' on quasi-static impedance and effective relative
	dielectric constant for Wheeler and Hammerstad equations.

2004-05-07  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Added dispersion terms, dielectrical
	and conductor losses for the microstrip line.

2004-05-06  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp (analyseZ0): Implemented a function
	which calculates the impedance of a microstrip line based on
	the lines and substrates geometry.

2004-05-01  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp: Improved convergence in backward region of
	the pn-junction.

2004-04-26  Stefan Jahn  <stefan@lkcc.org>

	* circulator.cpp: Implemented DC analysis for circulator.

2004-04-25  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: The file can be used as template
	for microstrip components.

	* component.h: Including microstrip component headers.

2004-04-04  Stefan Jahn  <stefan@lkcc.org>

	* attenuator.cpp, isolator.cpp: Implemented DC calculation.

2004-02-18  Stefan Jahn  <stefan@lkcc.org>

	* constants.h: Adjusted natural constants to correspond
	with the NIST.

2004-02-17  Stefan Jahn  <stefan@lkcc.org>

	* iac.cpp (iac): New component representing the AC current
	source.

	* pac.cpp: Implemented DC calculation.

2004-02-16  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp, resistor.cpp: Changed Y matrix (G-MNA) entries.
	Added S-parameter calculation to diode model including the 
	operating point computation.

2004-02-14  Stefan Jahn  <stefan@at66hft.ee.tu-berlin.de>

	* gyrator.cpp: Fixed MNA matrices for gyrator.

	* strafo.cpp: Fixed MNA matrices for symmetrical transformer.

	* trafo.cpp: Fixed the A matrix of the ideal transformer.

2004-02-10  Stefan Jahn  <stefan@lkcc.org>

	* ccvs.cpp, cccs.cpp: Fixed MNA stamps for DC analysis.

2004-02-09  Stefan Jahn  <stefan@lkcc.org>
