@@ -1,7 +1,7 @@
 /*
  * inductor.cpp - inductor class implementation
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: inductor.cpp,v 1.3 2004/02/17 15:30:58 ela Exp $
+ * $Id: inductor.cpp,v 1.4 2004/05/18 15:19:03 ela Exp $
  *
  */
 
@@ -41,13 +41,21 @@
 
 inductor::inductor () : circuit (2) {
   type = CIR_INDUCTOR;
+  setVoltageSources (1);
 }
 
 void inductor::calcSP (nr_double_t frequency) {
   nr_double_t l = getPropertyDouble ("L") / z0;
   complex z = rect (0, 2.0 * M_PI * frequency * l);
-  setS (1, 1, z / (z + 2.0));
-  setS (2, 2, z / (z + 2.0));
+  setS (1, 1,   z / (z + 2.0));
+  setS (2, 2,   z / (z + 2.0));
   setS (1, 2, 2.0 / (z + 2.0));
   setS (2, 1, 2.0 / (z + 2.0));
+}
+
+void inductor::calcDC (void) {
+  setC (1, 1, +1.0); setC (1, 2, -1.0);
+  setB (1, 1, +1.0); setB (1, 2, -1.0);
+  setE (1, 0.0);
+  setD (1, 1, 0.0);
 }
